# conscious-bridge-reloaded

./: .gitignore  .gitlab-ci.yml  2  2.pub  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_UPLOAD_SUCCESS.md  LICENSE  OPEN_ME.html  README_FINAL.txt  Readme.md  VERSION  docker-compose.yml  fill_empty_files.sh  index.html  launch.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
.github/workflows-disabled/: ci.yml  deploy.yml
api/: server_minimal.py
backup_20251214_033752/: BACKUP_INFO.txt
cli/: __init__.py  bridge_cli.py  command.py  commands.py  main.py  utils.py
core/: __init__.py  bridge_reloaded.py  consciousness_engine.py  maturity_system.py  personality_core.py
dialogue/: __init__.py  dialogue_analyzer.py  dialogue_engine.py  dialogue_manager.py  emotion_analyzer.py  response_generator.py  test_dialogue.py  working_dialogue.py
docs/: PHILOSOPHY.md  add-simulator.html  index.html  page2-test.html  page2.html
evolution/: adaptation_manager.py  learning_processor.py  maturity_tracker.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secrets.yaml.example  service.yaml
memory/: __init__.py  consolidation_engine.py  deep_memory.py  experience_store.py  insight_tracker.py  memory_manager.py  test_memory.py  working_memory.py
monitoring/: __init__.py  metrics.py
scripts/: backup_system.py  deploy-k8s.sh  health_check.py  setup.sh  update_system.py
storage/: __init__.py  bridge_repository.py  database.py  schema.sql
tests/: __init__.py  test_dialogue.py  test_internal_clock.py  test_maturity.py  test_personality.py
(+16 files in other folders)
