[metadata]
name = conscious-bridge-reloaded
version = 2.1.0
author = Conscious Bridge Team
description = Mobile AI Consciousness System - Evolution Ready

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Flask>=2.3.0
    numpy>=1.24.0
    pandas>=2.0.0
    SQLAlchemy>=2.0.0

[options.packages.find]
exclude = 
    tests*
    docs*
